# MajorDom-Docs

./: .gitignore  404.html  LICENSE.md  README.md  index.html  llms-full.txt  llms.txt  llms_sources.yml  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: dependabot-automerge.yml  llms-refresh.yml  publish.yml  release.yml
api/bridge/: index.html  index.md  swagger-2b48f5ab.html  swagger-3bbfea5e.html  swagger-fc5f3354.html
api/cloud/: index.html  index.md  swagger-322d8cf0.html  swagger-f07fc40c.html  swagger-f5392855.html
api/dev/: index.html
api/hub/: index.html  index.md  swagger-696de83e.html  swagger-a17660ca.html  swagger-bda6325e.html
architecture/: index.html
custom-device/: index.html
custom-device-legacy/: index.html
device-integration/: index.html  index.md
device-integration/controller/: index.html  index.md
device-integration/data_models/: index.html  index.md
device-integration/discovery/: index.html  index.md
device-integration/example-integration/: index.html  index.md
device-integration/parameter-ux/: index.html
device-integration/quality/: index.html
device-integration/standalone/: index.html
docs/: CNAME  architecture.md  custom-device.md  device-integration.md  index.md
docs/api/: bridge.md  cloud.md  hub.md
llms/: integration-homekit.txt  integration-matter.txt  integration-sdk.txt  integration-template.txt  integration-zigbee.txt  manifest.json
majordom_docs/: llms_hook.py
overrides/: main.html
scripts/: build_llms.py  check_llms_sources.py
search/: search_index.json
(+40 files in other folders)
